--- a/_locales/zh/sensors-strings.json
+++ b/_locales/zh/sensors-strings.json
@@ -1,7 +1,4 @@
 {
     "sensors|block": "感應器",
-    "sensors.sonar_ping|block": "超音波感應器 trig腳位 %trig|echo腳位 %echo|距離單位 %unit",
-    "sensors.unit_cm|block": "公分",
-    "sensors.unit_inch|block": "英吋",
-    "sensors.unit_us|block": "毫秒"
+    "sensors.ping|block": "超音波感應器 trig腳位 %trig|echo腳位 %echo|距離單位 %unit"
 }
