--- a/_locales/zh/sensors-strings.json
+++ b/_locales/zh/sensors-strings.json
@@ -3,5 +3,9 @@
     "sensors.ping|block": "超音波感應器 trig腳位 %trig|echo腳位 %echo|距離單位 %unit",
     "sensors.PingUnit.Centimeters|block":"公分",
     "sensors.PingUnit.Inches|block":"英吋",
-    "sensors.PingUnit.MicroSeconds|block":"毫秒"
+    "sensors.PingUnit.MicroSeconds|block":"毫秒",
+    "sensors.set_DHT11_pin|block": "溫濕度感應器DHT11 腳位 %pin_arg|取得 %dhtResult",
+    "sensors.Dht11Result.Celsius|block": "攝氏溫度",
+    "sensors.Dht11Result.Fahrenheit|block": "華氏溫度",
+    "sensors.Dht11Result.humidity|block": "濕度"
 }
